checking job finding/sep rates with a notebook

--- a/python/notebooks/BUG_paper_appendix_check.ipynb
+++ b/python/notebooks/BUG_paper_appendix_check.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "source": [
     "# BUG: Beveridgean Unemployment Gap\n",
-    "This notebook demonstrates the python implementation of the \"Beveridgean Unemployment Gap\" by Pascal Michaillat and Emmanuel Saez. The original code was in MATLAB. See [GitHub link](https://github.com/pascalmichaillat/unemployment-gap) for original. "
+    "This series of notebooks demonstrate the python implementation of the \"Beveridgean Unemployment Gap\" by Pascal Michaillat and Emmanuel Saez. The original code was in MATLAB. See [GitHub link](https://github.com/pascalmichaillat/unemployment-gap) for original. \n",
+    "\n",
+    "## Appendix\n",
+    "This notebook examines the python implementation of functions in the paper's online appendix. [link](https://ars.els-cdn.com/content/image/1-s2.0-S2666551421000048-mmc1.pdf)"
    ]
   },
   {
@@ -26,13 +29,16 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy.optimize import root"
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import style\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d95699",
+   "id": "1d1d1b36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +55,12 @@
     "## Read the data\n",
     "Here, we read from the [excel file](https://github.com/pascalmichaillat/unemployment-gap/blob/main/code/data.xlsx) provided with the unemployment-gap matlab package.\n",
     "\n",
-    "The goal of this notebook is to re-create analysis and some figures from the Unemployment Gap paper, so that we can verify we are getting the *same* outputs. (*Sameness* allowing for some small differences between the two language implementations)"
+    "The goal of this notebook is to re-create function and figures from the Unemployment Gap paper appendix, so that we can verify we are getting the *same* outputs. (*Sameness* allowing for some small differences between the two language implementations)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5235388",
+   "id": "6cf3af22",
    "metadata": {},
    "source": [
     "#### unemployment rate"
@@ -74,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10c4523e",
+   "id": "142d37b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0369ef",
+   "id": "700346f2",
    "metadata": {},
    "source": [
     "#### unemployment level"
@@ -95,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2544e23d",
+   "id": "bb59be30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd2a9a6",
+   "id": "964b427e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae2ef00",
+   "id": "7f54149c",
    "metadata": {},
    "source": [
     "#### short-term unemployment level"
@@ -127,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "957d0d70",
+   "id": "796e3b1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e104504",
+   "id": "813aa369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7956167d",
+   "id": "f25071c8",
    "metadata": {},
    "source": [
     "#### labor force level"
@@ -159,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac90600e",
+   "id": "b0d52bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e7cd7e",
+   "id": "56759e3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,47 +187,127 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4a602b",
+   "cell_type": "markdown",
+   "id": "7d2f019e",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15e4af8c",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "find_rate =  bug.compute_job_finding_rate(unempl_level, ushort_level)"
+    "#### Recession information"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fc486e5",
+   "id": "742d4413",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a964a3cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40cc53e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20890567",
+   "metadata": {},
    "source": [
-    "find_rate.name='job_find_rate'"
+    "## Appendix B: Job-related rates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25ab0a25",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Job-finding rate\n",
+    "Call the function `bug.compute_job_finding_rate()` with arguments:\n",
+    "  * unemployment level, required\n",
+    "  * short-term unemployment level, required\n",
+    "  * True/False for whether to convert monthly to quarterly, optional; default is True\n",
+    "  * True/False for whether to adjust the short-term level after 1994, as in Shimer (2012), optional; default is True\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "881c75f8",
+   "id": "3b3e438a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_rate"
+    "find_rate_q =  bug.compute_job_finding_rate(unempl_level, ushort_level, True, True)\n",
+    "find_rate_m =  bug.compute_job_finding_rate(unempl_level, ushort_level, False, True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74e0fcd",
+   "id": "1f6b685f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_rate_q.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc3f976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "find_rate_q.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5902228",
+   "metadata": {},
+   "source": [
+    "#### Re-create figure A1\n",
+    "Job-finding rate in the US, 1951-2019"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91625743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = find_rate_q.plot(figsize=(9,7), linewidth=1, label='Quarterly')\n",
+    "find_rate_m.plot(ax=ax, linewidth=1, label='Monthly')\n",
+    "plt.ylabel('Job-finding rate', fontsize=13)\n",
+    "plt.legend(fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78913a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_data = read.excel('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d383fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -229,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b755702",
+   "id": "6b5bf443",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c090c6ec",
+   "id": "d26dc856",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -245,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c839a2",
+   "id": "375578df",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,39 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ae85b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9bf51ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2069193a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0426106e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd8e231e",
+   "id": "678733e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -364,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e55032",
+   "id": "cc55e64b",
    "metadata": {},
    "outputs": [],
    "source": []
